# falaiseio

./: CMakeLists.txt  NOTICE  README.md  falaiseio.yaml
cmake/: falaiseio.pc.in  falaiseioCPack.cmake  falaiseioConfig.cmake.in  falaiseioCreateConfig.cmake  falaiseioUninstall.cmake
falaiseio/: CMakeLists.txt  Example.cpp  Example.h  falaiseioVersion.h.in
falaiseio/tests/: CMakeLists.txt  test_example.cpp
